--- a/requirements.txt
+++ b/requirements.txt
@@ -1,66 +1,81 @@
-asgiref==3.3.1
-backcall==0.2.0
-certifi==2020.11.8
+appdirs==1.4.4
+arabic-reshaper==2.1.1
+asgiref==3.2.10
+astroid==2.4.2
+CacheControl==0.12.6
+cachetools==4.1.1
+certifi==2020.6.20
 chardet==3.0.4
-colorama==0.4.4
-crypto==1.4.1
+colorama==0.4.3
 cycler==0.10.0
-decorator==4.4.2
+distlib==0.3.1
+dj-database-url==0.5.0
 Django==3.0.5
-django-mongoengine==0.4.4
+django-heroku==0.3.1
+djangorestframework==3.12.1
 djongo==1.3.3
+filelock==3.0.12
 firebase==3.0.1
-gcloud==0.18.3
+firebase-admin==4.4.0
+future==0.18.2
+gcloud==0.17.0
+google-api-core==1.23.0
+google-api-python-client==1.12.8
+google-auth==1.23.0
+google-auth-httplib2==0.0.4
+google-cloud-core==1.4.3
+google-cloud-firestore==2.0.1
+google-cloud-storage==1.33.0
+google-crc32c==1.0.0
+google-resumable-media==1.1.0
 googleapis-common-protos==1.52.0
-gunicorn==20.0.4
+grpcio==1.33.2
+html5lib==1.1
 httplib2==0.18.1
 idna==2.10
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-jedi==0.17.2
-jupyter-client==6.1.7
-jupyter-core==4.6.3
+isort==5.6.3
 jws==0.1.3
 kiwisolver==1.3.1
+lazy-object-proxy==1.4.3
 matplotlib==3.3.3
-mongo==0.2.0
-mongoengine==0.20.0
-Naked==0.1.31
+mccabe==0.6.1
+msgpack==1.0.0
 numpy==1.19.4
-oauth2client==4.1.2
+oauth2client==3.0.0
 pandas==1.1.5
-parso==0.7.1
-pickleshare==0.7.5
 Pillow==8.0.1
-prompt-toolkit==3.0.8
-protobuf==3.14.0
+proto-plus==1.11.0
+protobuf==3.13.0
 psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycryptodome==3.9.9
-Pygments==2.7.2
-pymongo==3.11.0
+pycryptodome==3.4.3
+pygame==2.0.0
+pylint==2.6.0
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
+pymongo==3.11.1
 pyparsing==2.4.7
-Pyrebase4==4.4.1
+PyPDF2==1.26.0
+Pyrebase==3.0.27
+python-bidi==0.4.2
 python-dateutil==2.8.1
 python-firebase==1.2
 python-jwt==2.0.1
-pyturtle==1.0.0
-pytz==2020.4
-pywin32==228
-PyYAML==5.3.1
-pyzmq==19.0.2
-requests==2.25.0
-requests-toolbelt==0.9.1
+pytz==2020.1
+reportlab==3.5.53
+requests==2.11.1
+requests-toolbelt==0.7.0
 rsa==4.6
 scipy==1.5.4
-shellescape==3.8.1
 six==1.15.0
 sqlparse==0.2.4
-tornado==6.1
-traitlets==5.0.5
-urllib3==1.26.2
-wcwidth==0.2.5
+toml==0.10.1
+uritemplate==3.0.1
+urllib3==1.25.11
+virtualenv==20.0.34
+virtualenvwrapper-win==1.2.6
+webencodings==0.5.1
 whitenoise==5.2.0
-xlrd==2.0.1
+wrapt==1.12.1
+xhtml2pdf==0.2.5
